added desktop styles for the project

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Starter Kit with Parcel JS</title>
+    <title>Password Generator</title>
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+      rel="stylesheet">
     <link rel="stylesheet" href="./scss/app.scss">
   </head>
   <body>
@@ -51,7 +55,8 @@
           <input type="text"
             name="generated_password"
             id="generated_password"
-            disabled="true">
+            disabled="true"
+            placeholder="Generate your Password">
 
           <!-- copy svg -->
           <a href="" id="copy">
@@ -62,6 +67,8 @@
         </div>
       </div>
     </main>
+
+    <!-- Footer -->
     <footer>
       <p>Checkout the project on
         <a href="https://github.com/harshPPatel/password-generator"
