--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
       rel="stylesheet">
+      <!-- Favicon -->
+      <link rel="shortcut icon" type="image/ico" href="./img/favicon.ico"/>
     <link rel="stylesheet" href="./scss/app.scss">
   </head>
   <body>
